force --enable-preview