@@ -67,7 +67,7 @@
     :or {dir "."}
     :as opts}]
   (println "running prep task for dependencies in:" lib)
-  (pio/shell [["clojure" "-J-Dclojure.main.report=stderr" "-X:deps" "prep" ":log" "debug"]] {:dir dir #_#_:env {"JAVA_OPTS" (System/getenv "JAVA_OPTS")}})
+  (pio/shell [["clojure" "-J-Dclojure.main.report=stderr" "-X:deps" "prep" ":log" "debug"]] {:dir dir})
   opts)
 
 (defn prep-self
@@ -142,7 +142,7 @@
         source-dirs (find-source-dirs opts)]
     (pio/shell [["clojure" "-J-Dclojure.main.report=stderr" "-Sdeps" (pr-str deps-check-config) "-X:spootnik-deps-check:test"
                  "spootnik.deps-check/check" ":paths" (pr-str source-dirs)]]
-               {:dir dir #_#_:env {"JAVA_OPTS" (System/getenv "JAVA_OPTS")}})
+               {:dir dir})
     opts))
 
 (defn test
@@ -153,9 +153,9 @@
                    (-> cmdline
                        (conj (pr-str k))
                        (conj (pr-str v))))
-                 ["clojure" "-J-Dclojure.main.report=stderr" "-X:test"]
+                 ["clojure" "-J--enable-preview" "-J-Dclojure.main.report=stderr" "-X:test"]
                  (dissoc opts :exoscale.tools.project.api.tasks/dir))]
-    (pio/shell [cmdline] {:dir dir :env {"JAVA_OPTS" (System/getenv "JAVA_OPTS")}}))
+    (pio/shell [cmdline] {:dir dir}))
   opts)
 
 (defn version
